Update to use best practice (more performant) ways for creating/adding to collections.